--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@
 
 * {
   font-family: 'Montserrat', sans-serif;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 .main {
@@ -12,8 +15,8 @@
 
 .left {
   flex: 1;
-  width: 50%;
-  padding-inline: 1rem;
+  /* width: 50%; */
+  padding-inline: 3rem;
 }
 
 .right {
@@ -23,12 +26,16 @@
 }
 
 .card img {
-  width: 100%;
+  width: 120px;
+  height: 100px;
+  object-fit: contain;
 }
 
 
 .right-tittle P {
   font-size: 15px;
+  line-height: 20px;
+  margin-top: 5px;
 }
 
 .right-tittle span {
@@ -36,18 +43,23 @@
 }
 
 .card {
-  min-height: 455px;
+  /* min-height: 100px; */
+  margin-top: 30px;
   display: flex;
+  padding: 5px;
+  /* height: 200px; */
   flex-direction: column;
-  justify-content: end;
+  position: relative;
+  /* justify-content: end; */
   align-items: center;
 
 }
-
+ 
 .right-cards {
   display: flex;
   justify-content: space-between;
-  gap: 5px;
+/* height: 100px; */
+  /* gap: 5px; */
 }
 
 .card-empty {
@@ -69,11 +81,20 @@
 .card h5 {
   font-weight: bold;
   font-size: 16px;
-  padding-top: 10px;
+  margin: 0px;
+  /* padding-top: 10px; */
 }
 
 .card p {
-  padding-top: 10px;
+  /* padding-top: 10px; */
+   /* overflow: hidden; */
+   color: #414141;
+
+font-family: Montserrat;
+font-size: 9px;
+font-style: normal;
+font-weight: 500;
+line-height: 15px;
 }
 
 .right-card-left {
@@ -88,6 +109,7 @@
 
 .center button {
   background: #34a9a0 !important;
+  padding: 10px ;
 }
 
 .rtt-right h5 {
@@ -100,6 +122,17 @@
 
 .rtt-right button {
   background: #8E8E8E !important;
+  padding: 10px;
+}
+.conpara{
+  color: #000;
+text-align: center;
+font-family: Montserrat;
+font-size: 11px;
+padding-top: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
 }
 
 .right-prag p {
@@ -377,7 +410,7 @@ main::before {
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 5px;
-  margin-top: 5px;
+  margin-top: 8px;
 }
 
 .boxbtn p {
@@ -431,21 +464,25 @@ a {
 
 .btnBox {
   display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin: 15px 0px;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 35px;
 }
 
 .loginBtn {
   background-color: #28867E;
   padding: 12px 50px;
-  border-radius: 5px;
+  width: 100%;
+  text-align: center;
+  border-radius: 10px;
 }
 
 .createBtn {
   background-color: #34A9A0;
   padding: 12px 50px;
-  border-radius: 5px;
+  width: 100%;
+  text-align: center;
+  border-radius: 10px;
 }
 
 /* Left Section End */
